grammar.js
    source_file: $ => choice($.expressions, $.where_clause),

    // Tokens
    semi_colon: _ => token(";"),
    keyword_if: _ => make_keyword("IF"),
    keyword_exists: _ => make_keyword("EXISTS"),
    keyword_tokenizers: _ => make_keyword("TOKENIZERS"),
    keyword_overwrite: _ => make_keyword("OVERWRITE"),
    keyword_on: _ => make_keyword("ON"),
    keyword_select: _ => make_keyword("SELECT"),
    keyword_from: _ => make_keyword("FROM"),
    keyword_where: _ => make_keyword("WHERE"),
    keyword_and: _ => make_keyword("AND"),
    keyword_not: _ => make_keyword("NOT"),
    keyword_define: _ => make_keyword("DEFINE"),
    keyword_analyzer: _ => make_keyword("ANALYZER"),
    keyword_namespace: _ => make_keyword("NAMESPACE"),
    keyword_token: _ => make_keyword("TOKEN"),
    keyword_create: _ => make_keyword("CREATE"),
    keyword_filters: _ => make_keyword("FILTERS"),
    keyword_type: _ => make_keyword("TYPE"),
    keyword_for: _ => make_keyword("FOR"),
    keyword_comment: _ => make_keyword("COMMENT"),
    keyword_session: _ => make_keyword("SESSION"),
    keyword_signin: _ => make_keyword("SIGNIN"),
    keyword_signup: _ => make_keyword("SIGNUP"),
    keyword_database: _ => make_keyword("DATABASE"),
    keyword_namespace: _ => make_keyword("NAMESPACE"),
    keyword_set: _ => make_keyword("SET"),
    expressions: $ =>
      seq(
        $.expression,
        repeat(seq($.semi_colon, $.expression)),
        optional($.semi_colon),
      ),

    expression: $ => choice($.primary_statement, $.subquery_statement, $.value),

    // Statements

    // Top level statements
    subquery_statement: $ =>
      choice(
        $.select_statement,
        $.if_statement,
        $.let_statement,
        $.alter_statement,
        $.delete_statement,
        $.create_statement,
        $.update_statement,
        $.remove_statement,
        $.return_statement,
        $.insert_statement,
        $.relate_statement,
        $.for_statement,
        $.define_analyzer_statement,
        $.define_database,
        $.define_event_statement,
        $.define_field_statement,
        $.define_function_statement,
        $.define_index_statement,
        $.define_namespace_statement,
        $.define_param_statement,
        $.define_scope_statement,
        $.define_table_statement,
        $.define_token_statement,
        $.define_user_statement,
      ),

    define_analyzer_statement: $ =>
      seq(
        $.keyword_define,
        $.keyword_analyzer,
        optional(choice($.if_not_exists_clause, $.keyword_overwrite)),
        $.identifier,
        repeat(
          choice(
            $.tokenizers_clause,
            $.filters_clause,
            $.function_clause,
            $.comment_clause,
          ),
        ),
      ),

    define_database: $ =>
      seq(
        $.keyword_define,
        $.keyword_database,
        optional(choice($.if_not_exists_clause, $.keyword_overwrite)),
        $.identifier,
        optional($.comment_clause),
      ),

    create_statement: $ =>
      seq(
        $.keyword_create,
        optional($.keyword_only),
        $.create_target,
        optional(choice($.content_clause, $.set_clause)),
        optional($.return_clause),
        optional($.timeout_clause),
      ),

    select_statement: $ =>
      seq($.select_clause, optional($.omit_clause), $.from_clause),

    select_clause: $ =>
      seq(
        $.keyword_select,
        choice(
          seq($.keyword_value, $.predicate),
          commaSeparated($.inclusive_predicate),
        ),
      ),

    from_clause: $ =>
      seq(
        $.keyword_from,
        optional($.keyword_only),
        choice(
          $.primary_statement,
          seq(
            commaSeparated($.value),
            optional($.with_clause),
            optional($.where_clause),
            optional($.split_clause),
            optional($.group_clause),
            optional($.order_clause),
            optional($.limit_clause),
            optional($.fetch_clause),
            optional($.timeout_clause),
            optional($.parallel_clause),
            optional($.explain_clause),
          ),
        ),
      ),

    where_clause: $ => seq($.keyword_where, $.value),

    tokenizers_clause: $ =>
      seq($.keyword_tokenizers, commaSeparated($.analyzer_tokenizers)),

    filters_clause: $ =>
      seq($.keyword_filters, commaSeparated($.analyzer_filters)),

    comment_clause: $ => seq($.keyword_comment, $.string),

    if_not_exists_clause: $ =>
      seq($.keyword_if, $.keyword_not, $.keyword_exists),
    create_target: $ =>
      choice(commaSeparated($.identifier), $.variable_name, $.function_call, $.record_id, $.multi_record),

    set_clause: $ => seq($.keyword_set, commaSeparated($.field_assignment)),

    field_assignment: $ => seq($.identifier, $.assignment_operator, $.value),

    // Value-related rules
    value: $ =>
      choice($.base_value, $.cast_expression, $.binary_expression, $.path, $.function_call, $.negated_expression),

    function_call: $ =>
      choice(
        seq($.keyword_count, $.argument_list_count),
        seq(
          choice($.function_name, $.custom_function_name, $.keyword_rand, seq($.identifier, repeat1(seq('::', $.identifier)))),
          optional($.version),
          $.argument_list,
        ),
      ),

    base_value: $ =>
      choice(
        $.string,
        $.prefixed_string,
        $.number,
        $.keyword_true,
        $.keyword_false,
        $.keyword_none,
        $.keyword_null,
        $.variable_name,
        $.identifier,
        $.array,
        $.record_id,
        $.sub_query,
        $.object,
        $.duration,
        $.point,
      ),

    binary_expression: $ => prec.left(seq($.value, $.operator, $.value)),

    inclusive_predicate: $ => choice("*", $.predicate),

    argument_list: $ => seq("(", optional(commaSeparated($.value)), ")"),

    analyzer_tokenizers: _ => choice("blank", "camel", "class", "punct"),

    analyzer_filters: $ =>
      choice(
        "ascii",
        "lowercase",
        "uppercase",
        seq("edgengram", "(", $.int, ",", $.int, ")"),
        seq("ngram", "(", $.int, ",", $.int, ")"),
        seq("snowball", "(", $.identifier, ")"),
      ),

    // Lexical tokens
    string: _ => /'[^'\\]*(?:\\.[^'\\]*)*'|"[^"\\]*(?:\\.[^"\\]*)*"/,
    int: _ => /-?[0-9]+/,
    variable_name: _ => /\$[a-zA-Z_][a-zA-Z0-9_]*/,
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    function_name: _ => /[a-zA-Z_][a-zA-Z0-9_]*(::[a-zA-Z_][a-zA-Z0-9_]*)*/,
    duration: $ => repeat1($.duration_part),
    duration_part: _ => /[0-9]+\s*(ns|us|µs|ms|s|m|h|d|w|y)/,
    operator: $ =>
      choice(
        $.binary_operator,
        "-",
        "=",
        ">",
        "<",
        "%",
        $.keyword_and,
        $.keyword_or,
        $.keyword_is,
        seq($.keyword_is, $.keyword_not),
        $.keyword_contains,
        $.keyword_contains_not,
        $.keyword_contains_all,
        $.keyword_contains_any,
        $.keyword_contains_none,
        $.keyword_inside,
        $.keyword_in,
        $.keyword_not_inside,
        seq($.keyword_not, $.keyword_in),
        $.keyword_all_inside,
        $.keyword_any_inside,
        $.keyword_none_inside,
        $.keyword_outside,
        $.keyword_intersects,
        seq("@", $.int, "@"),
        seq(
          "<|",
          $.int,
          optional(
            seq(
              ",",
              choice(
                $.int,
                $.keyword_chebyshev,
                $.keyword_cosine,
                $.keyword_euclidean,
                $.keyword_hamming,
                $.keyword_jaccard,
                $.keyword_manhattan,
                seq($.keyword_minkowski, $.number),
                $.keyword_pearson,
              ),
            ),
          ),
          "|>",
        ),
      ),

    assignment_operator: _ => choice("=", "+=", "-="),
  },
});

function commaSeparated(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function orSeparated(rule) {
  return seq(rule, repeat(seq("|", rule)));
}


function make_keyword(word) {
  return new RegExp([...word].map(c => `[${c.toLowerCase()}${c.toUpperCase()}]`).join(''));
}
