test/corpus/define_access.txt
==========================================
Create a RECORD access method for accounts
==========================================

DEFINE ACCESS account ON NAMESPACE TYPE RECORD
	SIGNUP ( CREATE user SET email = $email, pass = crypto::argon2::generate($pass) )
	SIGNIN ( SELECT * FROM user WHERE email = $email AND crypto::argon2::compare(pass, $pass) )
	DURATION FOR TOKEN 15m, FOR SESSION 12h;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_access_statement
          (keyword_define)
          (keyword_access)
          (identifier)
          (keyword_on)
          (keyword_namespace)
          (keyword_type)
          (keyword_record)
          (keyword_signup)
          (create_statement
            (keyword_create)
            (create_target
              (value
                (base_value
                  (identifier))))
            (set_clause
              (keyword_set)
              (field_assignment
                (identifier)
                (assignment_operator)
                (value
                  (base_value
                    (variable_name))))
              (field_assignment
                (identifier)
                (assignment_operator)
                (value
                  (function_call
                    (function_name)
                    (argument_list
                      (value
                        (base_value
                          (variable_name)))))))))
          (keyword_signin)
          (select_statement
            (select_clause
              (keyword_select)
              (inclusive_predicate))
            (from_clause
              (keyword_from)
              (value
                (base_value
                  (identifier)))
              (where_clause
                (keyword_where)
                (value
                  (binary_expression
                    (value
                      (binary_expression
                        (value
                          (base_value
                            (identifier)))
                        (operator)
                        (value
                          (base_value
                            (variable_name)))))
                    (operator
                      (keyword_and))
                    (value
                      (function_call
                        (function_name)
                        (argument_list
                          (value
                            (base_value
                              (identifier)))
                          (value
                            (base_value
                              (variable_name)))))))))))
          (duration_clause
            (keyword_duration)
            (keyword_for)
            (keyword_token)
            (duration
              (duration_part))
            (keyword_for)
            (keyword_session)
            (duration
              (duration_part))))))
    (semi_colon)))
